[gd_scene load_steps=3 format=1]

[ext_resource path="res://Scripts/MainGame.gd" type="Script" id=1]
[ext_resource path="res://fonts/MenuFont.fnt" type="BitmapFont" id=2]

[node name="Main" type="Node"]

script/script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="AttackButtons" type="HBoxContainer" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 149.0
margin/top = 424.0
margin/right = 1154.0
margin/bottom = 700.0
alignment = 0

[node name="FireButton" type="MenuButton" parent="Control/AttackButtons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 111.0
margin/right = 332.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Fire"
flat = true
items = [  ]

[node name="WaterButton" type="MenuButton" parent="Control/AttackButtons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 336.0
margin/top = 111.0
margin/right = 668.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Water"
flat = true
items = [  ]

[node name="IceButton" type="MenuButton" parent="Control/AttackButtons"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 672.0
margin/top = 111.0
margin/right = 1005.0
margin/bottom = 165.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Ice"
flat = true
items = [  ]

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 121.0
margin/top = 190.0
margin/right = 1136.0
margin/bottom = 346.0
custom_constants/separation = 545
alignment = 0

[node name="Panel" type="Panel" parent="Control/HBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 235.0
margin/bottom = 156.0

[node name="PlayerProgress" type="ProgressBar" parent="Control/HBoxContainer/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -3.0
margin/top = -65.0
margin/right = 235.0
margin/bottom = -20.0
range/min = 0.0
range/max = 100.0
range/step = 20.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="PlayerMove" type="Label" parent="Control/HBoxContainer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 0.0
margin/right = 239.0
margin/bottom = 181.0
custom_fonts/font = ExtResource( 2 )
text = "MOVE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 1

[node name="Panel2" type="Panel" parent="Control/HBoxContainer"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 780.0
margin/top = 0.0
margin/right = 1015.0
margin/bottom = 156.0

[node name="EnemyProgress" type="ProgressBar" parent="Control/HBoxContainer/Panel2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -3.0
margin/top = -56.0
margin/right = 235.0
margin/bottom = -11.0
range/min = 0.0
range/max = 100.0
range/step = 20.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = true

[node name="EnemyMove" type="Label" parent="Control/HBoxContainer/Panel2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 0.0
margin/right = 239.0
margin/bottom = 181.0
custom_fonts/font = ExtResource( 2 )
text = "MOVE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 1
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Control/AttackButtons/FireButton" to="." method="_on_FireButton_pressed"]

[connection signal="pressed" from="Control/AttackButtons/WaterButton" to="." method="_on_WaterButton_pressed"]

[connection signal="pressed" from="Control/AttackButtons/IceButton" to="." method="_on_IceButton_pressed"]


